HID: asus: Add product-id for the T100HA keyboard dock

The T100HA keyboard dock has the same special keys and custom
protocol multitouch touchpad as the T100TA, but uses a different
product id and has different coordinate ranges, add support for this.

BugLink: https://bugzilla.kernel.org/show_bug.cgi?id=197849
Signed-off-by: Hans de Goede <hdegoede@redhat.com>
---
Changes in v2:
-The new device-id is for the T100HA not the T100TAF
-The T100HA touchpad has different coordinate ranges, take this into account
-Rebase on top of hid/for-4.16/hid-quirks-cleanup/_base
-Drop the ASUS T100TA entry from ..., things work fine without it